Update foooter content

--- a/src/styles/components/footer.module.scss
+++ b/src/styles/components/footer.module.scss
@@ -78,6 +78,10 @@ footer {
     a.facebook {
       background-image: url('../../images/icons/icons8-facebook-100.png');
     }
+    
+    a.twitter {
+      background-image: url('../../images/icons/icons8-twitter-64.png');
+    }
 
     a.youtube {
       background-image: url('../../images/icons/icons8-play-button-100.png');
