--- a/src/styles/components/titlebox.module.scss
+++ b/src/styles/components/titlebox.module.scss
@@ -9,13 +9,12 @@
 
   &_image {
     margin: 0 auto;
-    background-image: url(../../images/logo.png);
+    background-image: url(https://razorpay.com/assets/razorpay-logo.svg);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
     grid-area: 1 / 1 / 2 / 2;
-    width: 200px;
-    height: 200px;
-    box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.15);
+    width: 100%;
+    height: 50px;
   }
 }
