Add incident events

--- a/src/styles/components/incidents.module.scss
+++ b/src/styles/components/incidents.module.scss
@@ -2,6 +2,9 @@
   &_content {
     padding: 15px;
   }
+  &_time_container {
+    display: flex;
+  }
   &_sub {
     //height: 0px;
     width: 100%;
