--- a/src/styles/components/incidents.module.scss
+++ b/src/styles/components/incidents.module.scss
@@ -3,7 +3,10 @@
     padding: 15px;
   }
   &_time_container {
-    display: flex;
+    display: inline-flex;
+    border: 2px solid salmon;
+    padding: 4px 8px;
+    border-radius: 8px;
   }
   &_sub {
     //height: 0px;
